--- a/public/css/center/map_responsive.css
+++ b/public/css/center/map_responsive.css
@@ -4656,4 +4656,12 @@
           cursor: pointer;
           border: none;
       }
+      [class^="inner"] {
+          position: relative;
+          margin: 0 auto;
+          width: -webkit-calc(100% - 2rem);
+          width: -moz-calc(100% - 2rem);
+          width: calc(100% - 6rem);
+          max-width: 1200px;
+      }
 }
