--- a/public/css/admin/layout.css
+++ b/public/css/admin/layout.css
@@ -5060,7 +5060,7 @@ table.comment tr td:nth-last-child(1) {
     border-radius: 4px;
     font-size: 15px;
     color: #757575;
-    margin-left: 5p;
+    margin-left: 5px;
 }
 
 #list_location li {
