--- a/public/css/contents/form-control.css
+++ b/public/css/contents/form-control.css
@@ -152,8 +152,23 @@ a.btn.btn-lg {
   margin-top: 2.5rem;
 }
 
+.input-group-name {
+  display: flex;
+  gap: 10px;
+  margin-top: 1.875rem;
+  margin-bottom: 1.875rem;
+}
+
+.input-group-name .input-wrap {
+  width: 50%;
+}
+
 .input-wrap+.input-wrap {
   margin-top: 1.875rem;
+}
+
+.input-group-name .input-wrap+.input-wrap {
+  margin-top: 0;
 }
 
 .input-row+.input-row {
