--- a/public/css/mypage/mypage_reponsive_new02.css
+++ b/public/css/mypage/mypage_reponsive_new02.css
@@ -22,13 +22,13 @@
 
     .now_tab_text {
         width: 100%;
-        height: 7.8rem;
+        height: 9.8rem !important; 
         display: flex;
         align-items: center;
         justify-content: center;
         color: #fff;
         /* background-color: #000; */
-        font-size: 2.2534rem;
+        font-size: 3rem !important;
         font-weight: 700;
         background: var(--bs-point) url(/images/btn/arrow_down_m.png) no-repeat right 1.7316rem center/ auto;
         background-size: 2.4001rem 1.6999rem;
