--- a/public/css/layout/popup.css
+++ b/public/css/layout/popup.css
@@ -176,7 +176,22 @@
 }
 
 .popup_wrap.reservation_pop .pop_box::-webkit-scrollbar {
-    display: none;          
+    width: 5px;              
+    height: 5px;
+}
+
+.popup_wrap.reservation_pop .pop_box::-webkit-scrollbar-thumb {
+    background-color: #888;  
+    border-radius: 10px;
+}
+
+.popup_wrap.reservation_pop .pop_box::-webkit-scrollbar-thumb:hover {
+    background-color: #555; 
+}
+
+.popup_wrap.reservation_pop .pop_box::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    border-radius: 10px;
 }
 
 .popup_wrap.promotion_pop .pop_box {
