--- a/public/css/invoice/invoice.css
+++ b/public/css/invoice/invoice.css
@@ -9,6 +9,22 @@
     padding-bottom: 120px;
 }
 
+/* .invoice_cancle {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;    
+} */
+
+.invoice_cancle img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+}
+
 .invoice_section .ttl_img{
     background-color: #e0ecf7;
     border-radius: 20px;
