--- a/public/css/layout/header.css
+++ b/public/css/layout/header.css
@@ -1032,7 +1032,7 @@
 
     #mobile_menu .m_my li {
         border: 0.2rem solid rgb(219, 219, 219);
-        padding: 1.3rem 0;
+        padding: 1.3rem 1rem;
         border-radius: 0.6rem;
         color: #787878;
         margin-right: 0.4231rem;
