--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -1244,6 +1244,20 @@
     flex-basis: 16%;
   }
 
+  .area_info .pallet i
+  {
+    display: inline-block;
+    width: 7.4rem;
+    height: 2rem;
+    background: url(/images/ico/bed.png) no-repeat center / cover;
+    background-size: 3.4rem 2rem;
+  }
+
+  .area_info .pallet img {
+    width: 2rem !important;
+    margin-top: 0.4rem !important;
+  }
+
   .area_info .child .content {
     font-size: 2.4rem;
   }
@@ -3672,6 +3686,7 @@
     background-color: var(--bs-point);
     color: white;
     border-radius: 0.4rem;
+    padding: 1.2rem 2rem;
   }
 
   .content-sub-hotel-detail .section3 {
@@ -4133,13 +4148,13 @@
 
   .content-sub-hotel-detail .room-table tr td:first-of-type {
     order: 1;
-    width: 100%;
+    width: 30%;
   }
 
   .content-sub-hotel-detail .room-table tr td:nth-of-type(2) {
-    order: 2;
-    width: 100%;
-    padding-top: 2rem;
+    order: 1;
+    width: 70%;
+    /* padding-top: 2rem; */
   }
 
   .content-sub-hotel-detail .room-table tr td:last-of-type {
@@ -4153,12 +4168,18 @@
     font-weight: 700;
     font-size: 2.4rem;
     position: absolute;
+    left: 67%;
   }
 
   .content-sub-hotel-detail .people_qty {
     text-align: left !important;
     padding-left: 6rem;
     font-size: 2.4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    text-align: end !important;
+    align-items: flex-end;
   }
 
   .content-sub-hotel-detail .room-details p:nth-child(1) {
@@ -4196,6 +4217,7 @@
   .content-sub-hotel-detail .people_qty img {
     margin-bottom: 1rem !important;
     width: 2rem !important;
+    margin-right: 7rem;
   }
 
   .content-sub-hotel-detail .col_wrap_room_rates {
