--- a/public/css/contents/sub.css
+++ b/public/css/contents/sub.css
@@ -3705,11 +3705,17 @@ input[type=checkbox]:checked+.vehicle_options__label__vehicle_prd::after {
 
 .popup_wrap.place_pop .pop_box {
     max-width: 900px;
-    /* padding: 0 59px; */
+    padding: 0 59px;
 }
 
 .popup_wrap.place_pop .pop_body {
-    padding: 0 59px;
+    /* padding: 0 59px; */
+    max-height: 700px;
+    overflow-y: auto;
+}
+
+.popup_wrap.place_pop .pop_body::-webkit-scrollbar {
+    display: none;
 }
 
 .meeting_time {
@@ -6898,6 +6904,27 @@ iframe::-webkit-scrollbar {
 @media screen and (max-width: 850px) {
     #iframeContainer {
         height: 460vh;
+    }
+
+    .popup_wrap.place_pop .pop_body {
+        /* padding: 0 59px; */
+        max-height: 60rem;
+        overflow-y: auto;
+    }
+
+    .popup_place__head {
+        border-bottom: 1px solid #222222;
+        padding-bottom: 2.5rem;
+        padding-top: 5.5rem;
+    }
+
+    .popup_place__body {
+        margin-top: 3rem;
+    }
+
+    #policyContent *{
+        font-size: 2rem !important;
+        line-height: 1.4 !important;
     }
 }
 
