--- a/public/css/invoice/invoice.css
+++ b/public/css/invoice/invoice.css
@@ -946,8 +946,8 @@
 }
 
 .golf_invoice .box_notifi {
-    border: 3px solid #ff6a00;
-    padding: 30px 10px 20px;
+    /* border: 3px solid #ff6a00;
+    padding: 30px 10px 20px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
