--- a/public/css/contents/main.css
+++ b/public/css/contents/main.css
@@ -1317,8 +1317,16 @@
     line-height: 1.3;
     color: #454545;
     margin-bottom: 15px;
-    padding-left: 10px;
+    /* padding-left: 10px; */
     width: calc(100% - 90px);
+}
+
+.product_details .name_flex {
+    flex-wrap: wrap;
+}
+
+.product_details .name_flex .name {
+    width: 100%;
 }
 
 .side-bar-inc .popup_review_cart .popups .pop_contents .product_details p.price {
