--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -4143,6 +4143,7 @@
     box-shadow: 0px 5px 0px 0px rgba(51, 51, 51, 0.04);
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
 .custom-golf-detail .section2-sub .left-main .tit-left {
@@ -6062,7 +6063,7 @@
 }
 
 .custom-golf-detail .section-wrap-s .btn-s-wrap .btn-price-content {
-    width: 100px;
+    width: 300px;
     height: 50px;
     font-size: 18px !important;
 }
