--- a/public/css/contents/sub.css
+++ b/public/css/contents/sub.css
@@ -4269,7 +4269,7 @@ input[type=checkbox]:checked+.vehicle_options__label__vehicle_prd::after {
 
 .customer-form-page .container-card .item-info {
     display: flex;
-    width: 220px;
+    width: 100%;
     margin-bottom: 12px;
 }
 
