--- a/public/css/center/map_responsive.css
+++ b/public/css/center/map_responsive.css
@@ -4734,10 +4734,10 @@
             height: 100%;
           }
 
-          .intro .intro_banner img {
+          .intro .intro_content .relative {
             position: absolute;
-            top: 29%;
-            right: 3rem;
+            top: -24%;
+            right: 1rem;
             width: 26.8rem;
             z-index: 3;
           }
