--- a/public/css/contents/sub.css
+++ b/public/css/contents/sub.css
@@ -5081,6 +5081,10 @@ input[type=checkbox]:checked+.vehicle_options__label__vehicle_prd::after {
     padding: 11px;
 }
 
+.order-form-page .info-table-order.info-table-cus-padding td .note {
+    margin-top: 10px;
+}
+
 .order-form-page .info-table-order.info-table-cus-padding td input {
     width: 370px;
 }
