--- a/public/css/contents/sub.css
+++ b/public/css/contents/sub.css
@@ -6887,6 +6887,13 @@ iframe::-webkit-scrollbar {
     padding: 0 20px 0 5px;
 }
 
+.wrap-golf-info {
+    gap: 40px;
+}
+
+.wrap-golf-info .ip-group {
+    width: 80px;
+}
 
 @media screen and (min-width: 1921px) {
     #iframeContainer {
