--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -2269,8 +2269,8 @@
     font-size: 3.6rem;
     font-weight: bold;
     line-height: 1.3;
-    /* width: 100%; */
-    width: 70%;
+    width: 100%;
+    /* width: 70%; */
     max-width: 100%;
   }
 
@@ -2278,7 +2278,8 @@
     gap: 0.8rem;
     display: flex;
     align-items: flex-start;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     margin-bottom: 2rem;
     margin-top: 1rem;
   }
@@ -2294,7 +2295,7 @@
   }
 
   .content-sub-hotel-detail .title-container .list-icon {
-    display: flex !important;
+    display: none !important;
     gap: 1rem;
     align-items: center;
   }
@@ -2305,6 +2306,19 @@
 
   .custom-golf-detail .location-container {
     margin-top: 2rem;
+  }
+
+  .custom-golf-detail .location-container .list-icon {
+    margin-left: auto;
+    display: flex;
+    gap: 1.5rem;
+  }
+
+  .custom-golf-detail .location-container .list-icon img {
+    padding: 0;
+    border-radius: unset;
+    width: 3.4rem;
+    height: 3.7rem;
   }
 
   .content-sub-hotel-detail .rating-container {
